# realtime-session-server

./: .gitignore  CMakeLists.txt  README.md
client/: console_client.cpp
docs/: architecture.md  benchmark.md  protocol.md
include/rss/domain/: Lobby.h  Position.h  Room.h  User.h
include/rss/net/: CompletionNotifier.h  EpollEventLoop.h  EventFdCompletionNotifier.h  ServerConfig.h  Session.h  TcpServer.h  WorkerPool.h
include/rss/protocol/: Packet.h  PacketCodec.h  PacketTypes.h
include/rss/service/: Command.h  MessageRouter.h  RoomService.h
include/rss/tools/: LatencyStats.h
include/rss/util/: BlockingQueue.h
src/: main.cpp
src/domain/: Lobby.cpp  Room.cpp  User.cpp
src/net/: EpollEventLoop.cpp  EventFdCompletionNotifier.cpp  Session.cpp  TcpServer.cpp  WorkerPool.cpp
src/protocol/: PacketCodec.cpp  PacketTypes.cpp
src/service/: MessageRouter.cpp  RoomService.cpp
test/: EventFdCompletionNotifierTest.cpp  LatencyStatsTest.cpp  MessageRouterTest.cpp  PacketCodecTest.cpp  RoomServiceTest.cpp  TestSupport.h  WorkerPoolNotificationTest.cpp
tools/: load_test_client.cpp
